# lightrover_ros2_new

./: .md  README.md  light_rover_手順書（humble_gazebo_gui）.md
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
YDLidar-SDK/examples/: gs_restart.cpp  gs_test.cpp  gs_test2.cpp  scl_test.cpp  sdm18_test.cpp  sdm_test.cpp  tea_test.cpp  tia_test.cpp  tmini-sh_test.cpp  tmini_test.cpp  tof_test.cpp  tri_and_gs_test.cpp  tri_test.cpp
YDLidar-SDK/src/: CYdLidar.cpp  CYdLidar.h  DTSLidarDriver.cpp  GSLidarDriver.cpp  GSLidarDriver.h  TiaLidarDriver.cpp  TiaLidarDriver.h  YDlidarDriver.cpp  YDlidarDriver.h
lightrover_description/: CMakeLists.txt  package.xml  readme.md
lightrover_description/config/: lightrover_controller.yaml  lightrover_controllers.yaml
lightrover_description/configuration_files/: lightrover_controller.yaml  show_model.rviz
lightrover_description/launch/: lightrover_gazebo.launch.py  lightrover_view.launch.py
lightrover_description/meshes/: base_link.dae  wheel.dae
lightrover_description/rviz/: lightrover.rviz
lightrover_description/urdf/: common.xacro  lightrover_urdf.xacro
lightrover_description/urdf/base/: base_gazebo.xacro  base_urdf.xacro
lightrover_description/urdf/caster/: caster_gazebo.xacro  caster_urdf.xacro
lightrover_description/urdf/lidar/: lidar_gazebo.xacro  lidar_urdf.xacro
lightrover_description/urdf/wheel/: wheel_gazebo.xacro  wheel_transmission.xacro  wheel_urdf.xacro
lightrover_description/worlds/: lightrover_sample_2.world
lightrover_navigation/: readme.md
lightrover_ros/: readme.md  setup.py
(+25 files in other folders)
